--- a/src/components/teacher/Teacher.component.scss
+++ b/src/components/teacher/Teacher.component.scss
@@ -1,6 +1,8 @@
 .teacher-container {
   text-align: center;
   display: flex;
+  width: fit-content;
+  margin: 0 auto;
   flex-direction: column;
   align-items: center;
   justify-content: center;
